# docsite-to-md

./: Cargo.toml  LICENSE-APACHE  README.md
benches/: export.rs
docs/: benchmarks.md
scripts/: live-benchmark.sh  package-size.sh
src/: browser.rs  client.rs  error.rs  lib.rs  main.rs  normalize.rs  types.rs
src/extractors/: docusaurus.rs  generic.rs  gitbook.rs  mkdocs.rs  mod.rs  nextra.rs  vitepress.rs
tests/: integration.rs  live_benchmark.rs  live_targets.json  normalization.rs
tests/fixtures/classic_gitbook/: README.md  chapter-1.html  chapter-1.md  root.html
tests/fixtures/docusaurus/: intro.html  root.html  tutorial.html
tests/fixtures/generic_docs/: blog.html  guide-duplicate.html  guide.html  root.html
tests/fixtures/mkdocs/: getting-started.html  reference.html  root.html
tests/fixtures/modern_gitbook/: api-reference.html  api-reference.md  getting-started.html  getting-started.md  root.html  root.md
tests/fixtures/nextra/: advanced.html  intro.html  root.html
tests/fixtures/vitepress/: config.html  root.html  start.html
tests/support/: mod.rs
